# mlx-experiments

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: linear_regression.py
src/mlx_experiments/: __init__.py  arrays.py  linear_regression.py
src/mlx_experiments/tiny_llm/: __init__.py  byte_tokenizer.py  data.py  model.py  sample.py  train.py
tests/: test_mlx_experiments.py  test_tiny_llm.py
tiny_llm_lab/: .gitignore  sample.py  train.py
