[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlx-experiments"
version = "0.1.0"
description = "Small MLX experiments for Apple silicon."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mlx",
]

[project.scripts]
tiny-llm-train = "mlx_experiments.tiny_llm.train:main"
tiny-llm-sample = "mlx_experiments.tiny_llm.sample:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
